# Q101_heze

./: .gitignore  RealityQ+.sln
src/RealityQ+/: RealityQ+.rc  RealityQ+.vcxproj  RealityQ+.vcxproj.filters  app_version.h  clog.h  crashdump.cpp  crashdump.h  main.cpp  resource.h
src/RealityQ+/config/: Algorithmconfig.json  IQMetricConfig - 副本.json  IQMetricConfig.json  IQMetricConfig_all.json  IQMetricConfig_flareHDR.json  IQMetricsParametersConfig.json  PatternName.json  analyzers.config  config.json  crosshairsConfig.json  dutType.json  dutconfig.json  historyDataConfig.ini  input_params.json  lettermodel.xml  limits.json  logconfig.properites  mainconfig.db  mesconfig.json  mtfconfig.json  (+3 more)
src/extlib/: .gitignore
src/plugins/cameraDetector/: .qmake.stash  AutoExposureWidget.cpp  AutoExposureWidget.h  AutoExposureWidget.ui  CMakeLists.txt  CameraDetector.json  CameraDetector.json.in  CameraDetector.pro  CameraDetector.vcxproj  CameraDetector.vcxproj.filters  CameraDetector_dependencies.pri  CameraDetector_resource.rc  CameraDetectord_resource.rc  CameraModel.cpp  CameraModel.h  README.md  cameradetector.cpp  cameradetector.h  cameradetector_global.h  cameradetectorconstants.h  eliminatehotpixel.cpp  eliminatehotpixel.h  ml_camera_observer.cpp  ml_camera_observer.h  ml_camera_system.cpp  ml_camera_system.h  ml_exposure_auto.cpp  ml_exposure_auto.h  ml_frame_observer.cpp  ml_frame_observer.h  ml_vimba_camera.cpp  ml_vimba_camera.h  multicamerdisplaytest.cpp  multicamerdisplaytest.h  multicamerdisplaytest.ui
src/plugins/cameraDetector/config/: H-28V0.csv  config.ini
(+1868 files in other folders)
